force-app/main/default/objects/Flight__c/fields/Airline_Name__c.field-meta.xml
<CustomField>
    <fullName>Airline_Name__c</fullName>
    <description>Name of Flight</description>
    <label>Airline Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>