force-app/main/default/objects/Flight__c/fields/Airline_Number__c.field-meta.xml
<CustomField>
    <fullName>Airline_Number__c</fullName>
    <description>Number of Flight</description>
    <label>Airline Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>