force-app/main/default/objects/Flight__c/fields/Arrival_Code__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Code__c</fullName>
    <description>Arrival Code Of Flight</description>
    <label>Arrival Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>