force-app/main/default/objects/Flight__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Booking Of Flight</description>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>