force-app/main/default/objects/Flight__c/fields/Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_And_Time__c</fullName>
    <description>Date And Time for Flight</description>
    <label>Date And Time</label>
    <type>DateTime</type>
</CustomField>