force-app/main/default/objects/Flight__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <description>Departure Cities</description>
    <label>Departure City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>