force-app/main/default/objects/Flight__c/fields/Departure_Code__c.field-meta.xml
<CustomField>
    <fullName>Departure_Code__c</fullName>
    <description>Departure Code of Flight</description>
    <label>Departure Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>