force-app/main/default/objects/Flight__c/fields/Return_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Date_Time__c</fullName>
    <description>Return Date and Timing Of Flight</description>
    <label>Return Date Time</label>
    <type>DateTime</type>
</CustomField>